Finish .csv preparation

--- a/recipes/AISHELL-3/ASR/CTC/hparams/train_with_wav2vec.yaml
+++ b/recipes/AISHELL-3/ASR/CTC/hparams/train_with_wav2vec.yaml
@@ -16,7 +16,7 @@ save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 
 # Data files
-data_folder: !PLACEHOLDER # e,g./path/to/aishell
+data_folder: !ref /data2/xiaolong/AISHELL-3 # e,g./path/to/aishell
 
 skip_prep: False
 ckpt_interval_minutes: 15 # save checkpoint every N min
